# docflow

./: .gitignore  README  README.md  pyproject.toml
app/: __init__.py  api.py  config.py  main.py
app/api/: __init__.py  bridge.py  encoding.py  export_dialog.py
app/data/: manifest.json
app/data/files/: e882bbbb-887c-457f-81e9-8133d493abf9.docx
app/database/: database.py
app/docflow_docx/: __init__.py  colors.py  pages.py  renderer.py  sanitize.py  structure.py  writer.py
app/repositories/: __init__.py  file_store.py  manifest.py
app/resources/html/: main.html
app/resources/js/: dialogs.js  editor.js  loading.js  logic-nodes-parity.js  main.js  node-blocks.js  node-editor.js  node-model.js  node-ui-uk.js  splash.js  templates.js  theme.js  unsaved.js  variant-editor.js
app/resources/js/core/: api-client.js  dom.js  utils.js
app/resources/sass/: main.css  main.css.map  main.sass
app/resources/sass/partials/: _base.sass  _components.sass  _design-system.sass  _editor.sass  _github-ui.sass  _header.sass  _layout.sass  _mixins.sass  _node-editor.sass  _overlays.sass  _polish.sass  _scrollbar.sass  _sidebar.sass  _splash.sass  _theme-switch.sass  _tokens.sass  _tree-view.sass  _upload-zone.sass  (+2 more)
app/services/: __init__.py  document_service.py  file_service.py
app/storage/: __init__.py  docx_numbering.py  docx_pages.py  docx_renderer.py  docx_sanitize.py  files.py  preview.py
app/tests/: test_edit_json_write.py  test_logic_nodes_parity.py  test_node_editor.py  test_preview_finalize.py  test_preview_sync.py  test_rules_logic.py  test_writer.py
