[project]
name = "docflow"
version = "0.1.0"
description = "Desktop document workflow app for DOCX, TXT, and PDF"
authors = [
    { name = "OleksiiKulinets", email = "kulinets.oleksii@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "python-docx",
    "pywebview",
    "beautifulsoup4",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
